--- a/src/plugins/kibana/public/visualize/wizard/step_1.html
+++ b/src/plugins/kibana/public/visualize/wizard/step_1.html
@@ -1,5 +1,5 @@
 <h1>
-  Create a new visualization <br class="visible-xs">
+  请选择可视化分析的类型 <br class="visible-xs">
   <span class="pull-right label label-default hidden-xs">Step 1</span>
   <span class="label label-default visible-xs">Step 1</span>
 </h1>
